Poules fonctionnent, calcul des scores et du classement

--- a/pewl2.html
+++ b/pewl2.html
@@ -14,7 +14,7 @@
 	  <h3>{{poulesCountDisplay}}</h3>
 
       <form class="new-poule">
-        <input type="text" name="text" placeholder="Entrez ici le nom de votre poule" />
+      	<button class="btn-ajout-poule">+Poule</button>
       </form>
     </header>
 
@@ -26,77 +26,81 @@
       {{/each}}
     </ul>
 
+	<div>
+		<button class="btn-classement">Classement</button>
+	</div>
   </div>
 
 </body>
 
- 
+ <template name="tabletitles">
+	<div class="poule-cell poule-cell-name cell-bottom-left cell-top cell-right">NOM</div>
+	<div class="poule-cell separator"></div>
+	{{#each scoreTitles}}
+		<div class="poule-cell poule-cell-cell cell-bottom-left cell-right cell-top">{{this}}</div>
+	{{/each}}
+	<div class="poule-cell separator"></div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top">Co.</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top">PV</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top">TD</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top">TR</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top cell-right">GA</div>
+	<div class="poule-cell separator"></div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-top cell-right">Pl.</div>
+	<div class="clear-both"></div>
+</template>
+
+<template name="tableentry">
+	<div class="poule-cell poule-cell-name edit-name cell-bottom-left cell-right">{{tireur}}</div>
+	<div class="poule-cell separator"></div>
+	{{#each results}}
+		{{#if isDiese val}}
+			<div class="poule-cell poule-cell-cell cell-bottom-left cell-right caseGrise"></div>
+		{{else}}
+			<div class="poule-cell poule-cell-cell cell-bottom-left cell-right">{{val}}<span class="state">{{state}}</span></div>
+		{{/if}}
+	{{/each}}
+	<div class="poule-cell separator"></div>
+	<div class="poule-cell poule-cell-case cell-bottom-left">{{ratio}}</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left">{{pv}}</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left">{{td}}</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left">{{tr}}</div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-right">{{ga}}</div>
+	<div class="poule-cell separator"></div>
+	<div class="poule-cell poule-cell-case cell-bottom-left cell-right">{{place}}</div>
+	<div class="clear-both"></div>
+</template>
+
 <template name="poule">
-	  
+
   <li class="{{#if editable}}editable{{/if}}">
   	<div>Nom : {{name}}<button class="delete">&times;</button></div>
   	<div>Editable : <input type="checkbox" checked="{{editable}}" class="toggle-editable" /></div>
+
   	<div class="poule-table"> <!-- la table de la poule -->
-  		<div class="poule-col"> <!-- les tireurs -->
-  			<div class="poule-cell poule-cell-name">NOMS</div>
-	  		{{#each tireurs}}
-	  		<div class="poule-cell poule-cell-name edit-name">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
-	  		<div class="poule-cell poule-cell-name"><button class="btn-ajout-tireur">Ajouter</button></div>
 
-	  	</div>
-	  	{{#each cols}}
-  		<div class="poule-col"> <!-- les scores -->
-  			<div class="poule-cell poule-cell-case">{{colId}}</div>
-	  			{{#each this.rows}}
-	  				<div class="poule-cell poule-cell-case">{{this.val}}</div>
-	  			{{/each}}
-	  	</div>
-	  	{{/each}}
-  		<div class="poule-col"> <!-- les ratios -->
-  			<div class="poule-cell poule-cell-case">Co.</div>
-	  		{{#each ratios}}
-	  		<div class="poule-cell poule-cell-case">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
-	  	</div>
-  		<div class="poule-col"> <!-- les tds -->
-  			<div class="poule-cell poule-cell-case">TD</div>
-	  		{{#each tds}}
-	  		<div class="poule-cell poule-cell-case">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
-	  	</div>
-  		<div class="poule-col"> <!-- les trs -->
-  			<div class="poule-cell poule-cell-case">TR</div>
-	  		{{#each trs}}
-	  		<div class="poule-cell poule-cell-case">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
-	  	</div>
-  		<div class="poule-col"> <!-- les gas -->
-  			<div class="poule-cell poule-cell-case">GA</div>
-	  		{{#each gas}}
-	  		<div class="poule-cell poule-cell-case">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
-	  	</div>
-  		<div class="poule-col"> <!-- les places -->
-  			<div class="poule-cell poule-cell-case">Pl.</div>
-	  		{{#each places}}
-	  		<div class="poule-cell poule-cell-case">
-	  			{{this}}
-	  		</div>
-	  		{{/each}}
+  		<div class="table-row">
+  			{{> tabletitles}}
 	  	</div>
 
-  	</div>
+		{{#each entries}}
+	  		<div class="table-row">
+				{{> tableentry}}
+	  		</div>
+		{{/each}}
+
+	  	<div class="table-row">
+	  		<div class="poule-cell poule-cell-name cell-bottom-left cell-right">
+	  			<button class="btn-ajout-tireur">Ajouter</button>
+	  		</div>
+			<div class="poule-cell separator"></div>
+	  		<div class="poule-cell poule-cell-name cell-bottom-left cell-right">
+	  			<button class="btn-score">Saisir un score</button>
+	  		</div>
+	  	</div>
+
+  	</div><!-- poule-table -->
+
   	<div class="clear-both"></div>
   </li>
 </template>
